# Class_DL-Exercises

./: .gitattributes  .gitignore  Report.ipynb  Report1.ipynb  pyproject.toml  requirements.txt
Models/: 20240129.pth  OkidoModel.pth  best_model.pth
