[tool.poetry]
name = "class-dl-exercises"
version = "0.1.0"
description = ""
authors = ["tsyu12345 <syukut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = { url = "https://download.pytorch.org/whl/cu111/torch-1.8.1%2Bcu111-cp39-cp39-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu111/torchvision-0.9.1%2Bcu111-cp39-cp39-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/torchaudio-0.8.1-cp39-cp39-win_amd64.whl" }



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
